some more tests

--- a/src/main/resources/templates/adminDash.html
+++ b/src/main/resources/templates/adminDash.html
@@ -103,8 +103,8 @@
 
         <div class="card-body">
           <h5 class="card-title">Create new driver</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a th:href="@{/admins/{id}/createDriver(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Add to database new driver.</p>
+          <a th:href="@{/admins/{id}/createDriver(id=${#authentication.principal.id})}" class="btn btn-primary">Add driver</a>
 
         </div>
       </div>
@@ -122,8 +122,8 @@
         <div class="card-body">
 
           <h5 class="card-title">Create new Car</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a th:href="@{/admins/{id}/createCar(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Add to the database new car.</p>
+          <a th:href="@{/admins/{id}/createCar(id=${#authentication.principal.id})}" class="btn btn-primary">Add car</a>
 
         </div>
       </div>
@@ -139,8 +139,8 @@
         <div class="card-body">
 
           <h5 class="card-title">Create Garage</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a th:href="@{/admins/{id}/createGarage(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Add to database new garage</p>
+          <a th:href="@{/admins/{id}/createGarage(id=${#authentication.principal.id})}" class="btn btn-primary">Add garage</a>
         </div>
       </div>
 
