--- a/src/main/resources/templates/changeSubscription.html
+++ b/src/main/resources/templates/changeSubscription.html
@@ -9,6 +9,7 @@
 <div th:replace="~{fragments/navbar :: navbar}">
 
 </div>
+<section class="orderCreation-fluid">
 <div class="container">
     <h1 class="display-5 text-center"><strong class="bg-blur rounded">Change SubscriptionType</strong></h1>
     <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
@@ -70,7 +71,7 @@
 
 </div>
 
-
+</section>
 <script th:src="@{/Js/ChangeSubscription.js}"></script>
 
 <div>
