--- a/src/main/resources/templates/makeSubscription.html
+++ b/src/main/resources/templates/makeSubscription.html
@@ -34,7 +34,7 @@
                  type="text"
                  class="form-control"
                  placeholder="addressFrom"/>
-          <small id="addressFromError" class="invalid-feedback form-text bg-danger rounded">
+          <small id="addressFromError" class="invalid-feedback">
             Address should be at least 2 characters.
           </small>
         </div>
