--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -49,9 +49,12 @@ td, th {
 }
 
 form.main-form {
-  background-image: linear-gradient(to bottom right, rgba(70, 70, 70, 0.8), rgba(10, 10, 10, 0.8));
+  background-image: linear-gradient(to bottom right, rgba(10, 50, 50, 0.9), rgba(10, 90, 90, 0.9));
   padding:10px 30px;
   border-radius: 20px;
+}
+.card-body{
+ background-image: linear-gradient(to bottom right, rgba(10, 50, 50, 0.9), rgba(10, 90, 90, 0.9));
 }
 
 .field-error {
